--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="main">
         <div class="container">
+            <h1>Victory point : 40</h1>
             <div class="content">
                 <div class="user1">
                     <h2>user 1</h2>
